--- a/codegen.yaml
+++ b/codegen.yaml
@@ -153,6 +153,10 @@ paths:
         '5XX':
           description: Unexpected error.
     #delete: should we want this?
+  # /Employees/Accounts/{IBAN}/Open: Should we?
+  # /Employees/Accounts/{IBAN}/Close: Should we?
+  # /Employees/Accounts/{IBAN}/Deposit: Should we?
+  # /Employees/Accounts/{IBAN}/Withdraw: Should we?
   /Costumers:
     get:
       tags:
@@ -569,6 +573,8 @@ components:
           example: Employee
         BirthDate:
           type: string
+          description: Date of Birth
+          format: date
           example: "1997-07-12"
         StreetName:
           type: string
@@ -600,6 +606,8 @@ components:
           example: Employee
         BirthDate:
           type: string
+          format: date
+          description: Date of Birth
           example: "1997-07-12"
         StreetName:
           type: string
