--- a/codegen.yaml
+++ b/codegen.yaml
@@ -21,9 +21,37 @@ tags:
     description: Operations available when creating transactions
   - name: Accounts
     description: Operations available when handling accounts
+  - name: Authentication
+    description: Operations available for authentication
 security:
   - bearerAuth: []         # use the same name as above
 paths:
+  /Login:
+    get:
+      tags:
+        - Authentication
+      summary: Login to account
+      operationId: Login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginDTO'
+      responses:
+        '200':
+          description: Account that user logged into
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CustomerWithAccountsDTO'
+        '400':
+          description: Bad request. Invalid request body.
+        '401':
+          description: Unauthorized or authorization information is missing or invalid.
+        '5XX':
+          description: Unexpected error.
   /Employees:
     get:
       tags:
@@ -665,13 +693,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/TransactionDTO'
-   
 components:
   securitySchemes:
     bearerAuth:            # arbitrary name for the security scheme
       type: http
       scheme: bearer
-      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
+      bearerFormat: JWT
   schemas:
     NewEmployeeDTO:
       type: object
@@ -784,6 +811,12 @@ components:
         Country:
           type: string
           example: Netherlands
+        Email:
+          type: string
+          example: brunocm@gmail.com
+        Password:
+          type: string
+          example: brunocm@gmail.com
         TransactionAmountLimit:
           type: integer
           example: 2000
@@ -872,6 +905,9 @@ components:
             $ref: '#/components/schemas/AccountDTO'
     AccountDTO:
       properties:
+        fkCustomerID:
+          type: integer
+          example: 1
         IBAN:
           type: string
           minLength: 18
@@ -902,12 +938,12 @@ components:
           example: 0
     NewAccountDTO:
       properties:
+        fkCustomerID:
+          type: integer
+          example: 1
         Type:
           type: string
           example: Current
-        Balance:
-          type: integer
-          example: 0
         Status:
           type: string
           example: Open
@@ -1038,3 +1074,14 @@ components:
           format: double
           example: 11.23
           description: The amount to transfer
+    LoginDTO:
+      type: object
+      properties:
+        email:
+          type: string
+          example: brunocm@gmail.com
+        password:
+          type: string
+          example: test..123
+
+        
