--- a/codegen.yaml
+++ b/codegen.yaml
@@ -413,13 +413,13 @@ paths:
           description: 'invalid input, object invalid' 
         '403':
           description: Forbidden, you do not have access rights
-  /Transactions/{iban}:
+  /transactions/{Iban}:
     get:
       tags:
         - Transactions
       summary: Get all transactions for a certain account by Iban
       parameters:
-        - name: iban
+        - name: Iban
           in: path
           required: true
           style: simple
@@ -436,7 +436,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/transactionDTO'
+                  $ref: '#/components/schemas/TransactionDTO'
    
 components:
   securitySchemes:
