--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 springfox.documentation.open-api.v3.path=/api-docs
 server.servlet.contextPath=/api
-server.port=8081
+server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:~/test
 
-# Access h2 database: http://localhost:8081/api/h2-console
-# Access swagger hub: http://localhost:8081/api/swagger-ui/
+# Access h2 database: http://localhost:8080/api/h2-console
+# Access swagger hub: http://localhost:8080/api/swagger-ui/
