--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:~/test
 
-# Access h2 database: http://localhost:8080/api/h2-console
-# Access swagger hub: http://localhost:8080/api/swagger-ui/
+# Access h2 database: http://localhost:8080/h2-console
+# Access swagger hub: http://localhost:8080/swagger-ui/#/
