--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 springfox.documentation.open-api.v3.path=/api-docs
-server.servlet.contextPath=/api/
+server.servlet.contextPath=/
 server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
