tests are working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,11 @@ server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/test
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:springdb
+debug=true
+
+
 
 # Access h2 database: http://localhost:8080/h2-console
 # Access swagger hub: http://localhost:8080/swagger-ui/#/
