Added a bunch of new tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 springfox.documentation.open-api.v3.path=/api-docs
 server.servlet.contextPath=/
 server.port=8080
+server.max-http-header-size=10000000
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.h2.console.enabled=true
