--- a/pom.xml
+++ b/pom.xml
@@ -196,5 +196,11 @@
             <version>5.2.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
     </dependencies>
 </project>
